actualizando css y html

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <h1>Calculadora de Supermercado</h1>
     
     <div class="input-group">
-      <label for="totalInput">Presupuesto total (S/):</label>
+      <label for="totalInput">Presupuesto total ($/):</label>
       <input type="number" id="totalInput" placeholder="Ej: 100.00">
       <button onclick="setTotal()">Establecer</button>
     </div>
 
     <div class="input-group">
-      <label for="itemInput">Agregar artículo (S/):</label>
+      <label for="itemInput">Agregar artículo ($/):</label>
       <input type="number" id="itemInput" placeholder="Ej: 12.50">
       <button onclick="addItem()">Agregar</button>
     </div>
 
-    <h2>Saldo restante: <span id="remaining">S/ 0.00</span></h2>
+    <h2>Saldo restante: <span id="remaining">$/ 0.00</span></h2>
 
     <ul id="itemList"></ul>
   </div>
