--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Calculadora de Presupuesto</title>
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<link rel="shortcut icon" href="juan.png" type="image/x-icon">
 </head>
 <body>
   <div class="container">
